--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
   "dependencies": {
     "axios": "0.18.1",
     "element-ui": "^2.11.0",
+    "highlight.js": "^9.18.1",
     "markdown-it": "^10.0.0",
+    "markdown-it-anchor": "^5.2.7",
+    "markdown-it-chain": "^1.3.0",
+    "markdown-it-container": "^2.0.0",
     "path-to-regexp": "2.4.0",
     "three": "^0.115.0",
+    "transliteration": "^2.1.8",
     "vue": "2.6.10",
     "vue-router": "3.0.6",
     "vuex": "3.1.0"
@@ -52,7 +57,7 @@
     "stylus-loader": "^3.0.2",
     "svg-sprite-loader": "4.1.3",
     "svgo": "1.2.2",
-    "vue-template-compiler": "2.6.10"
+    "vue-template-compiler": "^2.6.10"
   },
   "engines": {
     "node": ">=8.9",
