--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "Z-some-wheels",
-  "version": "1.0.0",
-  "description": "Finyu的小小组件库",
-  "author": "Pan <1253092242@qq.com>",
+  "name": "zsomewheels",
+  "version": "1.0.4",
+  "description": "一个小小的组件库",
+  "keyword": "zsomewheels Z-some-wheels Finyu",
+  "author": "Finyu <1253092242@qq.com>",
   "license": "MIT",
   "private": false,
-  "main": "packages/index.js",
+  "main": "lib/zsomewheels.umd.min.js",
   "scripts": {
-    "lib": "vue-cli-service build --target lib --name ZsomeWheels --dest lib packages/index.js",
+    "lib": "vue-cli-service build --target lib --name zsomewheels --dest lib packages/index.js",
     "dev": "vue-cli-service serve",
     "build:prod": "vue-cli-service build",
     "build:stage": "vue-cli-service build --mode staging",
