--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "path-to-regexp": "2.4.0",
     "three": "^0.115.0",
     "transliteration": "^2.1.8",
-    "vue": "2.6.10",
+    "vue": "^2.6.12",
     "vue-router": "3.0.6",
     "vuex": "3.1.0"
   },
